procedures: Viewing Che workspaces logs
refs: https://issues.redhat.com/browse/RHDEVDOCS-4574

--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -1,19 +1,25 @@
-:_content-type: ASSEMBLY
+:_content-type: REFERENCE
 :description: Viewing {prod-short} workspaces logs
 :keywords: administration-guide, viewing-che-workspaces-logs
 :navtitle: Viewing {prod-short} workspaces logs
 :page-aliases: .:viewing-che-workspaces-logs.adoc, administration-guide:viewing-che-workspaces-logs.adoc
 
-
 [id="viewing-{prod-id-short}-workspaces-logs"]
 = Viewing {prod-short} workspaces logs
 
+You can observe {prod-short} workspaces logs to get a better understanding and insight over the processes, such as:
 
-This section describes how to view {prod-short} workspaces logs.
+Editor logs::
+The editor logs lists plugins loaded by the editor.
 
-include::partial$assembly_viewing-logs-from-language-servers-and-debug-adapters.adoc[leveloffset=+1]
+The container runs out of memory::
+The logs contain `OOMKilled`.
+The processes in the container requested more memory than is available in the container.
 
+A process inside the container runs out of memory without the container noticing this::
+The logs contain an error message such as `OutOfMemoryException`.
+A process ran out of memory.
 
-include::partial$assembly_viewing-che-theia-ide-logs.adoc[leveloffset=+1]
-
-
+.Additional resources
+* xref:viewing-workspace-logs-in-cli.adoc[]
+* xref:viewing-workspace-logs-in-the-openshift-console.adoc[]
