--- a/modules/end-user-guide/pages/viewing-dotnet-with-netcoredebugoutput-plug-in-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-dotnet-with-netcoredebugoutput-plug-in-logs.adoc
@@ -1,9 +1,12 @@
-// viewing-logs-from-language-servers-and-debug-adapters
+:_content-type: ASSEMBLY
+:description: Viewing {prod-short} workspace .NET with NetcoredebugOutput plug-in logs
+:keywords: administration-guide, logs, dotnet, netcoredebugoutput
+:navtitle: .NET with NetcoredebugOutput plug-in
+:page-aliases:
 
 
 [id="viewing-logs-for-dotnet-with-netcoredebugoutput-plug-in"]
 = Viewing logs for .NET with NetcoredebugOutput plug-in
-
 
 include::partial$ref_netcoredebugoutput-plug-in.adoc[leveloffset=+1]
 
