--- a/modules/end-user-guide/pages/viewing-dotnet-with-omnisharp-theia-plug-in-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-dotnet-with-omnisharp-theia-plug-in-logs.adoc
@@ -1,9 +1,11 @@
-// viewing-logs-from-language-servers-and-debug-adapters
-
+:_content-type: ASSEMBLY
+:description: Viewing {prod-short} workspace .NET with OmniSharp-Theia plugin logs
+:keywords: administration-guide, logs, dotnet, omnisharp-theia
+:navtitle: .NET with OmniSharp-Theia plugin
+:page-aliases:
 
 [id="viewing-logs-for-dotnet-with-omnisharp-theia-plug-in"]
 = Viewing logs for .NET with OmniSharp-Theia plug-in
-
 
 include::partial$ref_omnisharp-theia-plug-in.adoc[leveloffset=+1]
 
