--- a/modules/end-user-guide/pages/viewing-go-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-go-logs.adoc
@@ -1,5 +1,8 @@
-// viewing-logs-from-language-servers-and-debug-adapters
-
+:_content-type: ASSEMBLY
+:description: Viewing {prod-short} workspace Go logs
+:keywords: administration-guide, logs, golang, go
+:navtitle: Go
+:page-aliases:
 
 [id="viewing-logs-for-go"]
 = Viewing logs for Go
