--- a/modules/end-user-guide/pages/viewing-intelephense-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-intelephense-logs.adoc
@@ -1,4 +1,9 @@
 // viewing-logs-from-language-servers-and-debug-adapters
+:_content-type: ASSEMBLY
+:description: Viewing {prod-short} workspace Intelephense logs
+:keywords: administration-guide, logs, golang, intelephense
+:navtitle: Intelephense
+:page-aliases:
 
 
 [id="viewing-logs-for-intelephense"]
