--- a/modules/end-user-guide/pages/viewing-java-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-java-logs.adoc
@@ -1,4 +1,8 @@
-// viewing-logs-from-language-servers-and-debug-adapters
+:_content-type: ASSEMBLY
+:description: Viewing {prod-short} workspace Java logs
+:keywords: administration-guide, logs, golang, java
+:navtitle: Java
+:page-aliases:
 
 
 [id="viewing-logs-for-java"]
