--- a/modules/end-user-guide/pages/viewing-php-debug-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-php-debug-logs.adoc
@@ -1,4 +1,8 @@
-// viewing-logs-from-language-servers-and-debug-adapters
+:_content-type: PROCEDURE
+:description: Viewing {prod-short} workspace PHP logs
+:keywords: administration-guide, logs, php
+:navtitle: PHP
+:page-aliases:
 
 [id="viewing-logs-for-php-debug"]
 = Viewing logs for PHP-Debug
