--- a/modules/end-user-guide/pages/viewing-xml-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-xml-logs.adoc
@@ -1,4 +1,9 @@
 // viewing-logs-from-language-servers-and-debug-adapters
+:_content-type: ASSEMBLY
+:description: Viewing {prod-short} workspace XML logs
+:keywords: administration-guide, logs, xml
+:navtitle: XML
+:page-aliases:
 
 
 [id="viewing-logs-for-xml"]
