--- a/modules/end-user-guide/pages/viewing-yaml-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-yaml-logs.adoc
@@ -1,4 +1,8 @@
-// viewing-logs-from-language-servers-and-debug-adapters
+:_content-type: ASSEMBLY
+:description: Viewing {prod-short} workspace YAML logs
+:keywords: administration-guide, logs, yaml
+:navtitle: YAML
+:page-aliases:
 
 
 [id="viewing-logs-for-yaml"]
