--- a/modules/end-user-guide/pages/viewing-nodedebug-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-nodedebug-logs.adoc
@@ -1,4 +1,8 @@
-// viewing-logs-from-language-servers-and-debug-adapters
+:_content-type: PROCEDURE
+:description: Viewing {prod-short} workspace Node.js logs
+:keywords: administration-guide, logs, node
+:navtitle: Node.js
+:page-aliases:
 
 [id="viewing-logs-for-the-nodedebug-nodedebug2-adapter"]
 = Viewing logs for the NodeDebug NodeDebug2 adapter
