--- a/modules/end-user-guide/pages/viewing-python-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-python-logs.adoc
@@ -1,4 +1,8 @@
-// viewing-logs-from-language-servers-and-debug-adapters
+:_content-type: PROCEDURE
+:description: Viewing {prod-short} workspace Python logs
+:keywords: administration-guide, logs, python
+:navtitle: Python
+:page-aliases:
 
 [id="viewing-logs-for-python"]
 = Viewing logs for Python
