--- a/modules/end-user-guide/pages/viewing-typescript-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-typescript-logs.adoc
@@ -1,5 +1,8 @@
-// viewing-logs-from-language-servers-and-debug-adapters
-
+:_content-type: ASSEMBLY
+:description: Viewing {prod-short} workspace Typescript logs
+:keywords: administration-guide, logs, typescript
+:navtitle: Typescript
+:page-aliases:
 
 [id="viewing-logs-for-typescript"]
 = Viewing logs for Typescript
