--- a/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
+++ b/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
@@ -11,7 +11,7 @@ To search and install extensions, the Visual Studio Code editor is using an embe
 You can configure {prod-short} to rather use your Open VSX registry instance.
 
 .Procedure
-* Set the URL of your Open VSX registry instance in the CheClustor Custom Resource `spec.components.pluginRegistry.openVSXURL` field.
+* Set the URL of your Open VSX registry instance in the CheCluster Custom Resource `spec.components.pluginRegistry.openVSXURL` field.
 +
 [source,yaml,subs="+attributes,+quotes"]
 ----
