--- a/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
+++ b/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
@@ -7,7 +7,7 @@
 [id="configuring-the-open-vsx-registry-url"]
 = Configuring the Open VSX registry URL
 
-To search and install extensions, the Visual Studio Code editor is using an embedded Open VSX registry instance.
+To search and install extensions, the Visual Studio Code editor uses an embedded Open VSX registry instance.
 You can configure {prod-short} to rather use your Open VSX registry instance.
 
 .Procedure
