--- a/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
+++ b/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
@@ -8,7 +8,7 @@
 = Configuring the Open VSX registry URL
 
 To search and install extensions, the Visual Studio Code editor uses an embedded Open VSX registry instance.
-You can configure {prod-short} to rather use your Open VSX registry instance.
+You can also configure {prod-short} to use another Open VSX registry instance rather than the embedded one.
 
 .Procedure
 * Set the URL of your Open VSX registry instance in the CheCluster Custom Resource `spec.components.pluginRegistry.openVSXURL` field.
