--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -13,7 +13,7 @@ The default Open VSX registry differs depending on how proxies or DNS is configu
 
 If open-vsx.org can be resolved, the default will be to the public link:https://open-vsx.org/[Open VSX Registry]; if not, then the default will be a locally cached Open VSX registry instance within the plugin-registry pod to support airgapped, offline, and proxy-restricted deployments. 
 
-It is also possible to control what instance of Open VSX should be used in the workspaces. This configuration is part of the `CheCluster` Custom Resource:
+It is also possible to control what instance of Open VSX should be used in the workspaces, should you want to include your own custom build. This configuration is part of the `CheCluster` Custom Resource:
 
 [source,yaml,subs="+quotes"]
 ----
