--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -23,7 +23,7 @@ spec:
       openVSXURL: "__<Open_VSX_registry_URL>__" # <1> 
 ----
 
-<1> Sets the URL of Open VSX registry. The default value is `https://open-vsx.org`. In case if the value is empty, {prod-short} will use a local Open VSX registry.
+<1> Sets the URL of Open VSX registry. The default value is `https://open-vsx.org`. An empty string will cause  {prod-short} to use the local Open VSX registry in the plug-in registry pod.
 
 The local/embedded registry is running in the plugin-registry pod and provides a subset of VS Code extensions that are published on link:https://open-vsx.org/[Open VSX Registry].
 
