--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -25,7 +25,7 @@ spec:
 
 <1> Sets the URL of Open VSX registry. The default value is `https://open-vsx.org`. An empty string will cause  {prod-short} to use the local Open VSX registry in the plug-in registry pod.
 
-The local/embedded registry is running in the plugin-registry pod and provides a subset of VS Code extensions that are published on link:https://open-vsx.org/[Open VSX Registry].
+The local Open VSX registry runs in the plug-in registry pod and provides a subset of the VS Code extensions published on link:https://open-vsx.org/[Open VSX Registry].
 
 .Next topics describe how to manage a local Open VSX registry:
 
