--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -27,7 +27,7 @@ spec:
 
 The local Open VSX registry runs in the plug-in registry pod and provides a subset of the VS Code extensions published on link:https://open-vsx.org/[Open VSX Registry].
 
-.Next topics describe how to manage a local Open VSX registry:
+.Below, please find information about managing a local Open VSX registry:
 
 include::partial$proc_importing-extensions-from-the-open-vsx-registry.adoc[leveloffset=+1]
 
