--- a/modules/administration-guide/pages/managing-ide-extensions.adoc
+++ b/modules/administration-guide/pages/managing-ide-extensions.adoc
@@ -7,7 +7,7 @@
 [id="managing-ide-extensions"]
 = Managing IDE extensions
 
-All IDEs use extensions or plugins to extend the functionality. The mechanism of adding extensions into IDEs is different from one to another. 
+IDEs use extensions or plugins to extend their functionality; however, the mechanism for adding extensions differs between editors. 
 This section describes how to manage extensions for editors in {prod-short}.
 
 * xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
