--- a/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
@@ -8,7 +8,7 @@ This section describes how to add VS Code extensions from link:https://open-vsx.
 .Prerequisites
 
 . The extension should be published on link:https://open-vsx.org/[Open VSX Registry]
-. An information about an ID of the extension. The ID contains the extension's pubisher and name (e.g. `redhat.vscode-xml`).
+. The extension's ID, which is composed of publisher name and extension name, must be known (e.g. `redhat.vscode-xml`).
 
 .Procedure
 
