--- a/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
@@ -20,7 +20,7 @@ This section describes how to add VS Code extensions from link:https://open-vsx.
         "id": "extension_id"
     }
 ----
-In this case the latest version of the extension from link:https://open-vsx.org/[Open VSX Registry] will be published. If need to specify the version, use the next structure:
+If no `version` is provided, the latest version of the extension from link:https://open-vsx.org/[Open VSX Registry] will be included in the registry. Alternatively, set a `version` to pin to a specific version:
 +
 [source,json]
 ----
