--- a/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
@@ -29,7 +29,7 @@ If no `version` is provided, the latest version of the extension from link:https
         "version": "extension_version"
     }
 ----
-. Build the container image with plugin registry and push the image to a container registry:
+. To build the plug-in registry container image and publish it to a container registry, run the following commands:
 +
 [subs="+attributes,+quotes"]
 ----
