--- a/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
@@ -34,7 +34,7 @@ If no `version` is provided, the latest version of the extension from link:https
 [subs="+attributes,+quotes"]
 ----
 $ ./build.sh -o username -r quay.io -t next
-$ {docker-cli} push username/che-theia-devspaces:next
+$ {docker-cli} push quay.io/username/che-plugin-registry:custom
 ----
 . Customize an instance of `CheCluster` Custom Resource in the cluster to point the image and save the changes:
 +
