--- a/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
@@ -33,7 +33,7 @@ If no `version` is provided, the latest version of the extension from link:https
 +
 [subs="+attributes,+quotes"]
 ----
-$ ./build.sh -o username -r quay.io -t next
+$ ./build.sh -o username -r quay.io -t custom
 $ {docker-cli} push quay.io/username/che-plugin-registry:custom
 ----
 . Customize an instance of `CheCluster` Custom Resource in the cluster to point the image and save the changes:
