--- a/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
@@ -48,4 +48,4 @@ spec:
           - image: quay.io/username/pluginregistry-rhel8:next
       openVSXURL: '' 
 ----
-. Check that `che-plugin-registry` pod restarted and it's running. Restart the workspace and check plugins in the Plugins view.
+. Check that `plugin-registry` pod restarted and is running. Restart the workspace and check the available extensions in the Extensions view.
