--- a/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
@@ -5,7 +5,11 @@
 
 This section describes how to add VS Code extensions that are not in the link:https://open-vsx.org/[Open VSX Registry] to {prod-short}'s embedded Open VSX Registry.
 
-It's possible that link:https://open-vsx.org/[Open VSX Registry] doesn't contain an extension that needs to be used in the workspace. If the extension was not yet published on the link:https://open-vsx.org/[Open VSX Registry]. In that case, please reach out to the extension's author and ask them to publish the extension on the Open VSX registry, the link:https://open-vsx.org/[how to Publish an Extension] docs provide instructions or try to import it into the local registry by using the procedure from this page.
+To use an extension that has not been published to the link:https://open-vsx.org/[Open VSX Registry], contact the extension's author to ask them to publish the extension. See link:https://github.com/eclipse/openvsx/wiki/Publishing-Extensions#how-to-publish-an-extension[How to Publish an Extension].
+
+If you need the extension and the owner cannot or will not publish it, you may be able to fork it and publish it yourself. Consult the license terms of the extension to find out if this is possible. 
+
+You can also import the extension into the local registry from the procedure in this document. 
 
 .Prerequisites
 . The vsix file of the VS Code extension should be deployed somewhere to download it by the direct link.
