--- a/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
@@ -12,7 +12,7 @@ If you need the extension and the owner cannot or will not publish it, you may b
 You can also import the extension into the local registry from the procedure in this document. 
 
 .Prerequisites
-. The vsix file of the VS Code extension should be deployed somewhere to download it by the direct link.
+. The VS Code extension file (.vsix) must be available to download via direct link.
 . The extenshion's id and version that is going to be added.  
 
 .Procedure
