--- a/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
@@ -13,7 +13,7 @@ You can also import the extension into the local registry from the procedure in 
 
 .Prerequisites
 . The VS Code extension file (.vsix) must be available to download via direct link.
-. The extenshion's id and version that is going to be added.  
+. The ID and version of the extension to be added.  
 
 .Procedure
 . Modify `openvsx-sync.json` file in the link:https://github.com/redhat-developer/devspaces/blob/devspaces-3-rhel-8/dependencies/che-plugin-registry/openvsx-sync.json[plugin-registry repository] to add an information about the extension:
