--- a/modules/administration-guide/partials/proc_removing-extensions-from-the-embedded-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_removing-extensions-from-the-embedded-open-vsx-registry.adoc
@@ -7,7 +7,7 @@ This section describes how to remove VS Code extensions from the embedded Open V
 
 .Procedure
 . Modify `openvsx-sync.json` file in the link:https://github.com/redhat-developer/devspaces/blob/devspaces-3-rhel-8/dependencies/che-plugin-registry/openvsx-sync.json[plugin-registry repository] to remove extensions from the list.
-. Build the container image with plugin registry and push the image to a container registry:
+. To build the plug-in registry container image and publish it to a container registry, run the following commands:
 +
 [subs="+attributes,+quotes"]
 ----
