--- a/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
@@ -37,7 +37,7 @@ for example:
     }
 ----
 NOTE: If the extension is available in link:https://marketplace.visualstudio.com/vscode[VS Code Marketplace], the download link could be build like https://extension_publisher.gallery.vsassets.io/_apis/public/gallery/publisher/extension_publisher/extension/extension_name/extension_version/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage. For GoogleCloudTools.cloudcode extension it is https://GoogleCloudTools.gallery.vsassets.io/_apis/public/gallery/publisher/GoogleCloudTools/extension/cloudcode/1.20.3/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage
-. Build the container image with plugin registry and push the image to a container registry:
+. To build the plug-in registry container image and publish it to a container registry, run the following commands:
 +
 [subs="+attributes,+quotes"]
 ----
