--- a/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
@@ -42,7 +42,7 @@ NOTE: If the extension is available in link:https://marketplace.visualstudio.com
 [subs="+attributes,+quotes"]
 ----
 $ ./build.sh -o username -r quay.io -t next
-$ {docker-cli} push username/che-theia-devspaces:next
+$ {docker-cli} push quay.io/username/che-plugin-registry:custom
 ----
 . Customize an instance of `CheCluster` Custom Resource in the cluster to point the image and save the changes:
 +
