--- a/modules/administration-guide/partials/proc_removing-extensions-from-the-embedded-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_removing-extensions-from-the-embedded-open-vsx-registry.adoc
@@ -11,7 +11,7 @@ This section describes how to remove VS Code extensions from the embedded Open V
 +
 [subs="+attributes,+quotes"]
 ----
-$ ./build.sh -o username -r quay.io -t next
+$ ./build.sh -o username -r quay.io -t custom
 $ {docker-cli} push quay.io/username/che-plugin-registry:custom
 ----
 . Customize an instance of `CheCluster` Custom Resource in the cluster to point the image and save the changes:
