--- a/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-from-the-open-vsx-registry.adoc
@@ -45,7 +45,7 @@ spec:
     pluginRegistry:
       deployment:
         containers:
-          - image: quay.io/username/pluginregistry-rhel8:next
+          - image: quay.io/username/plugin-registry:custom
       openVSXURL: '' 
 ----
 . Check that `plugin-registry` pod restarted and is running. Restart the workspace and check the available extensions in the Extensions view.
