--- a/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
@@ -53,7 +53,7 @@ spec:
     pluginRegistry:
       deployment:
         containers:
-          - image: quay.io/username/pluginregistry-rhel8:next
+          - image: quay.io/username/plugin-registry:custom
       openVSXURL: '' 
 ----
 . Check that `che-plugin-registry` pod restarted and it's running. Restart the workspace and check plugins in the Plugins view.
