--- a/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
+++ b/modules/administration-guide/partials/proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc
@@ -56,4 +56,4 @@ spec:
           - image: quay.io/username/plugin-registry:custom
       openVSXURL: '' 
 ----
-. Check that `che-plugin-registry` pod restarted and it's running. Restart the workspace and check plugins in the Plugins view.
+. Check that `plugin-registry` pod restarted and is running. Restart the workspace and check the available extensions in the Extensions view.
