docs: pointing to extensions documentation

--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -23,3 +23,4 @@ A process ran out of memory.
 .Additional resources
 * xref:viewing-workspace-logs-in-cli.adoc[]
 * xref:viewing-workspace-logs-in-the-openshift-console.adoc[]
+* xref:viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc[]
