--- a/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
+++ b/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
@@ -13,7 +13,7 @@ The {image-puller-name-short} can pre-pull most images, including scratch images
 
 . Gather a list of relevant container images to pull by navigating to the `pass:c,a,q[{prod-url}]/plugin-registry/v3/external_images.txt` URL.
 
-. Determine images from the list for pre-pulling. For faster workspace startup times, consider pulling workspace related images such as `universal-developer-image`, che-code`, `che-gateway`, and plug-in sidecar images.
+. Determine images from the list for pre-pulling. For faster workspace startup times, consider pulling workspace related images such as `universal-developer-image`, che-code`, and `che-gateway`.
 
 .Additional resources
 * xref:installing-image-puller-on-openshift-using-the-web-console.adoc[]
