fix: fix xrefs and in-line referencing text

--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -26,7 +26,7 @@ You can create permanent mount points for various components:
 * AWS authorization tokens
 * Configuration files
 * Persistent storage
-* xref:using-git-credentials.adoc[Git credentials]
+* xref:using-a-git-provider-access-token.adoc[Git-provider access tokens]
 
 .Additional resources
 
