--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -63,9 +63,7 @@
 *** xref:configuring-routes.adoc[]
 ** xref:configuring-storage.adoc[]
 *** xref:installing-che-using-storage-classes.adoc[]
-** xref:branding.adoc[]
-*** xref:branding-che-theia.adoc[]
-*** xref:branding-vs-code.adoc[]
+** xref:branding-visual-studio-code.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
 *** xref:oauth-for-github-gitlab-or-bitbucket.adoc[]
 **** xref:configuring-oauth-2-for-github.adoc[]
