--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -24,7 +24,7 @@ This makes a {prod-short} workspace easy to share.
 Visual Studio Code is the default browser-based IDE. {prod-short} adds these features:
 
 Tasks::
-In Visual Studio Code, commands that are defined in the devfile appear as tasks.
+Commands that are defined in the devfile appear as tasks.
 +
 To execute such command, go to menu:Terminal[Run Task].
 +
