--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -26,7 +26,7 @@ Visual Studio Code is the default browser-based IDE. {prod-short} adds these fea
 Tasks::
 Commands that are defined in the devfile appear as tasks.
 +
-To execute such command, go to menu:Terminal[Run Task].
+To execute such a command, go to menu:Terminal[Run Task].
 +
 Alternatively, kbd:[F1] to open the *Command Palette* and type `Tasks: Run Tasks` to see a drop-down list of available task-related commands.
 
