--- a/modules/end-user-guide/pages/viewing-workspace-logs-in-the-openshift-console.adoc
+++ b/modules/end-user-guide/pages/viewing-workspace-logs-in-the-openshift-console.adoc
@@ -23,7 +23,7 @@ This page displays the {orch-name} {orch-namespace} name __<{orch-namespace}_nam
 
 . In the *Project* drop-down menu, select the __<{orch-namespace}_name>__ {orch-namespace} to narrow the search.
 
-. Click on the name of the running Pod running the workspace.
+. Click on the name of the running pod that runs the workspace.
 The *Details* tab contains the list of all containers with additional information.
 
 . Go to the *Logs* tab.
