--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -10,7 +10,7 @@
 You can view {prod-short} workspaces logs to get a better understanding and insight into the processes, such as:
 
 Editor logs::
-The editor logs lists plugins loaded by the editor.
+The editor logs list plugins loaded by the editor.
 
 The container runs out of memory::
 The logs contain `OOMKilled`.
