--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -13,7 +13,7 @@ Editor logs::
 The editor logs list plugins loaded by the editor.
 
 The container runs out of memory::
-The logs contain `OOMKilled`.
+The logs contain an `OOMKilled`error message.
 The processes in the container requested more memory than is available in the container.
 
 A process inside the container runs out of memory without the container noticing this::
