--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -16,9 +16,9 @@ The container runs out of memory::
 The logs contain an `OOMKilled`error message.
 The processes in the container requested more memory than is available in the container.
 
-A process inside the container runs out of memory without the container noticing this::
+A process runs out of memory::
 The logs contain an error message such as `OutOfMemoryException`.
-A process ran out of memory.
+A process inside the container ran out of memory without the container noticing.
 
 .Additional resources
 * xref:viewing-workspace-logs-in-cli.adoc[]
