--- a/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
+++ b/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
@@ -8,7 +8,7 @@
 = Viewing language servers and debug adapters logs in Visual Studio Code
 
 In the Visual Studio Code editor running for your workspace,
-you can view language servers and debug adapters extensions logs.
+you can configure the extensions to view language servers and debug adapter extensions logs.
 
 .Procedure
 . Configure the extension: click File > Preferences > Settings, expand the Extensions section, search for your extension, and set the `trace.server` or similar configuration to `verbose`, if such configuration exists.
