--- a/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
+++ b/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
@@ -14,7 +14,7 @@ you can configure the extensions to view language servers and debug adapter exte
 . Configure the extension: click File > Preferences > Settings, expand the Extensions section, search for your extension, and set the `trace.server` or similar configuration to `verbose`, if such configuration exists.
 Refer to the extension documentation for further configuration.
 
-. View your language server logs: click View → Output, and select your language server in the drop-down list for the Output view.
+. View your language server logs by clicking *View* → *Output*, and selecting your language server in the drop-down list for the Output view.
 
 .Additional resources
 * link:https://open-vsx.org/[Open VSX registry]
