--- a/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
+++ b/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
@@ -11,7 +11,7 @@ In the Visual Studio Code editor running for your workspace,
 you can configure the extensions to view language servers and debug adapter extensions logs.
 
 .Procedure
-. Configure the extension: click File > Preferences > Settings, expand the Extensions section, search for your extension, and set the `trace.server` or similar configuration to `verbose`, if such configuration exists.
+. Configure the extension: click *File* > *Preferences* > *Settings*, expand the *Extensions* section, search for your extension, and set the `trace.server` or similar configuration to `verbose`, if such configuration exists.
 Refer to the extension documentation for further configuration.
 
 . View your language server logs by clicking *View* → *Output*, and selecting your language server in the drop-down list for the Output view.
