--- a/modules/end-user-guide/pages/viewing-workspace-logs-in-the-openshift-console.adoc
+++ b/modules/end-user-guide/pages/viewing-workspace-logs-in-the-openshift-console.adoc
@@ -17,7 +17,7 @@ This page displays the {orch-name} {orch-namespace} name __<{orch-namespace}_nam
 
 . Click on the upper right *Applications* menu, and click the OpenShift console link.
 
-. Run next steps in the OpenShift console, in the *Administrator* perspective.
+. Run the next steps in the OpenShift console, in the *Administrator* perspective.
 
 . Click *Workloads* > *Pods* to see a list of all the active workspaces.
 
