--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -7,7 +7,7 @@
 [id="viewing-{prod-id-short}-workspaces-logs"]
 = Viewing {prod-short} workspaces logs
 
-You can view {prod-short} workspaces logs to get a better understanding and insight into the processes, such as:
+You can view {prod-short} logs to better understand and debug background processes should a problem occur.
 
 Editor logs::
 The editor logs list plugins loaded by the editor.
