--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -10,7 +10,7 @@
 You can view {prod-short} logs to better understand and debug background processes should a problem occur.
 
 An issue with an extension::
-The editor logs list plugins loaded by the editor.
+The logs list the plugins that have been loaded by the editor.
 
 The container runs out of memory::
 The logs contain an `OOMKilled`error message.
