--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -14,7 +14,7 @@ The logs list the plugins that have been loaded by the editor.
 
 The container runs out of memory::
 The logs contain an `OOMKilled` error message.
-The processes in the container requested more memory than is available in the container.
+Processes running in the container attempted to request more memory than is configured to be available to the container.
 
 A process runs out of memory::
 The logs contain an error message such as `OutOfMemoryException`.
