--- a/modules/glossary/partials/con_glossary.adoc
+++ b/modules/glossary/partials/con_glossary.adoc
@@ -23,7 +23,7 @@ Che-Code:: The default editor component of a {prod-short} workspace. It is a {pr
 //TODO See for a diagram of {prod-short} extensibility architecture. 
 Both {prod-short} plugins and editors are distributed through the {prod-short} plugins registry.
  
-Workspace:: A container-based development environment managed by {prod}. Every  {prod-short} workspace is defined by a devfile. A  {prod-short} workspace consists of an editor, plugins and runtime containers. Workspace runtime containers can be defined as simple container images or as {platforms-name} resources. A {prod-short} workspace can be associated with source code projects hosted on a remote CVS server. A {prod-short} workspace can contain the definition of one or more commands such as `run`, `build`, or `debug`.
+Workspace:: A container-based development environment managed by {prod}. Every  {prod-short} workspace is defined by a devfile. A  {prod-short} workspace consists of an editor, plugins, and runtime containers. Workspace runtime containers can be defined as simple container images or as {platforms-name} resources. A {prod-short} workspace can be associated with source code projects hosted on a remote CVS server. A {prod-short} workspace can contain the definition of one or more commands such as `run`, `build`, or `debug`.
 
 Devfile:: A workspace configuration template. Use devfiles to create workspaces in the Dashboard. A devfile includes metadata such as scope, tags, components, description, name, and identification.
 
