--- a/modules/glossary/partials/con_glossary.adoc
+++ b/modules/glossary/partials/con_glossary.adoc
@@ -11,7 +11,7 @@ This section provides an overview of the main terms and expressions used through
 == Naming
 {prod}:: A developer platform for the cloud that provides an in-browser editor (IDE). You can enhance {prod-short} tools by adding development services, such as language servers, debug adapters, or IDEs packaged as containers.
 
-Che-Code:: The default editor component of a {prod-short} workspace. It is a {prod-short}-specific customization of the Visual Studio Code editor. You can enhance Che-Code with link:https://marketplace.visualstudio.com/VSCode[Visual Studio Code extensions].
+Che-Code:: The default editor component of a {prod-short} workspace. It is a {prod-short}-specific customization of the Visual Studio Code editor. You can enhance Che-Code with link:https://open-vsx.org[Visual Studio Code extensions].
 
 {prod-short} Workspace:: A container-based development environment managed by {prod}. Every {prod-short} workspace is defined by a devfile. A {prod-short} workspace consists of an editor, runtime and build containers, and other development tools running inside containers.
 
