--- a/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
+++ b/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
@@ -7,7 +7,7 @@
 [id="viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code"]
 = Viewing language server and debug adapter logs in Visual Studio Code
 
-In the Visual Studio Code editor running for your workspace,
+In the Visual Studio Code editor running in your workspace,
 you can configure the extensions to view language servers and debug adapter extensions logs.
 
 .Procedure
