--- a/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
+++ b/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
@@ -8,7 +8,7 @@
 = Viewing language server and debug adapter logs in Visual Studio Code
 
 In the Visual Studio Code editor running in your workspace,
-you can configure the extensions to view language servers and debug adapter extensions logs.
+you can configure the installed language server and debug adapter extensions to view their logs.
 
 .Procedure
 . Configure the extension: click *File* > *Preferences* > *Settings*, expand the *Extensions* section, search for your extension, and set the `trace.server` or similar configuration to `verbose`, if such configuration exists.
