--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -40,6 +40,9 @@
 ** xref:navigating-openshift-web-console-from-che.adoc[]
 * xref:troubleshooting-che.adoc[]
 ** xref:viewing-che-workspaces-logs.adoc[]
+*** xref:viewing-workspace-logs-in-cli.adoc[]
+*** xref:viewing-workspace-logs-in-the-openshift-console.adoc[]
+*** xref:viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc[]
 ** xref:investigating-failures-at-a-workspace-start-using-the-verbose-mode.adoc[]
 ** xref:troubleshooting-slow-workspaces.adoc[]
 ** xref:troubleshooting-network-problems.adoc[]
